end of day commits

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -24,12 +24,38 @@
           "imported": false,
           "parents": [],
           "type": "css"
+        },
+        "04f501e1": {
+          "id": "04f501e1",
+          "path": "image_assets/fa-envelope.png",
+          "output": "image_assets/fa-envelope.png",
+          "name": "fa-envelope.png",
+          "category": "IMAGE",
+          "size": 25760,
+          "type": "png",
+          "initialSize": 25760,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "56e46b6a": {
+          "id": "56e46b6a",
+          "path": "image_assets/fa-print.png",
+          "output": "image_assets/fa-print.png",
+          "name": "fa-print.png",
+          "category": "IMAGE",
+          "size": 6731,
+          "type": "png",
+          "initialSize": 6731,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {
         "9becd0ca": {
-          "size": 57585,
-          "date": "2016-06-21T22:32:38.718Z"
+          "size": 58828,
+          "date": "2016-06-22T21:03:06.269Z"
         }
       },
       "config": {
