--- a/prepros.cfg
+++ b/prepros.cfg
@@ -25,19 +25,6 @@
           "parents": [],
           "type": "css"
         },
-        "04f501e1": {
-          "id": "04f501e1",
-          "path": "image_assets/fa-envelope.png",
-          "output": "image_assets/fa-envelope.png",
-          "name": "fa-envelope.png",
-          "category": "IMAGE",
-          "size": 25760,
-          "type": "png",
-          "initialSize": 25760,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "56e46b6a": {
           "id": "56e46b6a",
           "path": "image_assets/fa-print.png",
@@ -47,6 +34,32 @@
           "size": 6731,
           "type": "png",
           "initialSize": 6731,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "35a05c1f": {
+          "id": "35a05c1f",
+          "path": "image_assets/fa-envelope-uncrop.png",
+          "output": "image_assets/fa-envelope-uncrop.png",
+          "name": "fa-envelope-uncrop.png",
+          "category": "IMAGE",
+          "size": 25760,
+          "type": "png",
+          "initialSize": 25760,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "04f501e1": {
+          "id": "04f501e1",
+          "path": "image_assets/fa-envelope.png",
+          "output": "image_assets/fa-envelope.png",
+          "name": "fa-envelope.png",
+          "category": "IMAGE",
+          "size": 227582,
+          "type": "png",
+          "initialSize": 227582,
           "optimized": false,
           "height": 0,
           "width": 0
