end of day commits

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -63,12 +63,64 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "f84d3fb2": {
+          "id": "f84d3fb2",
+          "path": "image_assets/fa-envelope-small.png",
+          "output": "image_assets/fa-envelope-small.png",
+          "name": "fa-envelope-small.png",
+          "category": "IMAGE",
+          "size": 22847,
+          "type": "png",
+          "initialSize": 22847,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "c815af3d": {
+          "id": "c815af3d",
+          "path": "image_assets/fa-print-small.png",
+          "output": "image_assets/fa-print-small.png",
+          "name": "fa-print-small.png",
+          "category": "IMAGE",
+          "size": 24230,
+          "type": "png",
+          "initialSize": 24230,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "3ecc84a4": {
+          "id": "3ecc84a4",
+          "path": "image_assets/fa-print-sm.png",
+          "output": "image_assets/fa-print-sm.png",
+          "name": "fa-print-sm.png",
+          "category": "IMAGE",
+          "size": 18372,
+          "type": "png",
+          "initialSize": 18372,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "ab508bc2": {
+          "id": "ab508bc2",
+          "path": "image_assets/fa-envelope-sm.png",
+          "output": "image_assets/fa-envelope-sm.png",
+          "name": "fa-envelope-sm.png",
+          "category": "IMAGE",
+          "size": 21081,
+          "type": "png",
+          "initialSize": 21081,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {
         "9becd0ca": {
-          "size": 58828,
-          "date": "2016-06-22T21:03:06.269Z"
+          "size": 59035,
+          "date": "2016-06-23T22:41:27.000Z"
         }
       },
       "config": {
