--- a/prepros.cfg
+++ b/prepros.cfg
@@ -119,8 +119,8 @@
       },
       "deploymentHistory": {
         "9becd0ca": {
-          "size": 59202,
-          "date": "2016-06-24T22:55:55.820Z"
+          "size": 59825,
+          "date": "2016-06-27T22:41:50.699Z"
         }
       },
       "config": {
@@ -140,7 +140,8 @@
           "mouseSync": true,
           "scrollSync": true,
           "keyboardSync": true,
-          "animateCss": true
+          "animateCss": true,
+          "enable": false
         },
         "deployment": {
           "ftpHost": "147.153.45.41",
