--- a/prepros.cfg
+++ b/prepros.cfg
@@ -115,12 +115,25 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "b27ad193": {
+          "id": "b27ad193",
+          "path": "image_assets/msudenver-chat-logo.png",
+          "output": "image_assets/msudenver-chat-logo.png",
+          "name": "msudenver-chat-logo.png",
+          "category": "IMAGE",
+          "size": 14223,
+          "type": "png",
+          "initialSize": 14223,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {
         "9becd0ca": {
-          "size": 59699,
-          "date": "2016-06-29T19:58:49.307Z"
+          "size": 59743,
+          "date": "2016-06-29T22:56:03.987Z"
         }
       },
       "config": {
