fix end chat alignment, send button resizing

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -128,12 +128,28 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "966f55dc": {
+          "id": "966f55dc",
+          "path": "livenow-MSUDenver-dist.css",
+          "output": "livenow-MSUDenver-dist-dist.css",
+          "name": "livenow-MSUDenver-dist.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
         }
       },
       "deploymentHistory": {
         "9becd0ca": {
-          "size": 59743,
-          "date": "2016-06-29T22:56:03.987Z"
+          "size": 60069,
+          "date": "2016-07-05T19:54:30.236Z"
         }
       },
       "config": {
